// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL gaBRgU"
  >
    Test text
  </div>
</DocumentFragment>
`;

exports[`renders 2`] = `
<DocumentFragment>
  <header
    class="sc-gsDKAQ jGoJmq"
  >
    Test text
  </header>
</DocumentFragment>
`;

exports[`renders 3`] = `
<DocumentFragment>
  <div
    class="sc-dkPtRN PHDyg"
  >
    Test text
  </div>
</DocumentFragment>
`;

exports[`renders 4`] = `
<DocumentFragment>
  <header
    class="sc-hKwDye klnJXo"
  >
    Test text
  </header>
</DocumentFragment>
`;

exports[`renders 5`] = `
<DocumentFragment>
  <div
    class="sc-eCImPb gayBGf"
  >
    Test text
  </div>
</DocumentFragment>
`;
